--- a/api-portfolio/.env.sample
+++ b/api-portfolio/.env.sample
@@ -1,2 +1,8 @@
-DATABASE_URL=""
-DIRECT_URL=""
+
+# Connect to Supabase via connection pooling with Supavisor.
+DATABASE_URL=
+
+# Direct connection to the database. Used for migrations.
+DIRECT_URL=
+        
+
